--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,12 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 	
+<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+
+	
     <!-- https://mvnrepository.com/artifact/jakarta.platform/jakarta.jakartaee-web-api -->
 <dependency>
     <groupId>jakarta.platform</groupId>
