--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,14 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL57Dialect
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=true
+
+#file related all configurations
+spring.servlet.multipart.max-file-size = 10MB
+spring.servlet.multipart.max-request-size = 10MB
+
+project.image = images/
+
+spring.security.user.name= shashank
+spring.security.user.password= shashank
+
+
