added DB authentication

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,10 @@ spring.servlet.multipart.max-request-size = 10MB
 
 project.image = images/
 
-spring.security.user.name= shashank
-spring.security.user.password= shashank
+logging.level.org.springframework.security=DEBUG
+
+#spring.security.user.name= shashank
+#spring.security.user.password= shashank
+#spring.security.user.roles= ADMIN
 
 
